...
        </TouchableOpacity>
      </View>
    );
  } else {
    content = (
      <FlatList
        testID="feed-list"
        key={`feed-${initialIndex}-${selectedCategoryIds.join(',')}`}
        ref={listRef}
        data={filteredFeedData}
        initialScrollIndex={initialIndex}
        renderItem={({ item }) => (
          <MantraCarousel
...
  }

  return (
    <View className="flex-1" style={{ backgroundColor: colors.primary }}>
      <View className="absolute top-5 left-0 right-0 z-10 flex-row items-center justify-between px-6 pt-14 pb-4">
        <TouchableOpacity
          testID="category-filter-btn"
          activeOpacity={0.7}
          onPress={() => setShowCategoryFilter(true)}
          className="items-center justify-center"
        >
          <View
            className="rounded-full items-center justify-center"
...
