...
              paddingVertical: 4,
              paddingHorizontal: 12,
              borderRadius: 12,
              backgroundColor: colors.secondary,
            }}
          >
            <AppText style={{ color: colors.white, fontSize: 14 }}>Edit</AppText>
          </TouchableOpacity>
        </View>
        <View style={{ marginTop: 22, marginBottom: 40 }}>
          <TouchableOpacity
            style={[
              { marginBottom: 10, flexDirection: 'row', justifyContent: 'space-between' },
...
